--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
 
 <head>
+
+    <!-- meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator - Perform Simple and Scientific Calculations</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="utils.css">
-    <link rel="stylesheet" href="mediaqueri.css">
+    <meta name="description"
+        content="I made this Simple Calculator which fulfills your requirements about Calculations. It is the basic and Simple Calulator. I made this Calculator using HTML5, CSS3, and some JavaScript. This is the first Calculator which I made. Use your open source Calulator and Enjoy!">
+    <meta name="keywords" content="html, CSS3, CSS, Calculator, Simple Calculator, Calculations">
+    <meta name="robots" content="INDEX, FOLLOW">
+    <meta name="google-site-verification" content="cRhjKZGzyzWVEM6MN-UYpss1n3tTtlUeh60sBjekLik">
+
+    <!-- title -->
+    <title>Calculator - Perform Simple Calculations</title>
+
+    <!-- Cascading Stylesheets Links -->
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/utils.css">
+    <link rel="stylesheet" href="/CSS/media.css">
+
+    <!-- Favicon Link -->
+    <link rel="shortcut icon" href="/Assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -49,7 +63,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
