--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <title>Calculator - Perform Simple Calculations</title>
 
     <!-- Cascading Stylesheets Links -->
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/utils.css">
-    <link rel="stylesheet" href="/CSS/media.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="utils.css">
+    <link rel="stylesheet" href="media.css">
 
     <!-- Favicon Link -->
-    <link rel="shortcut icon" href="/Assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
